# CoinFlip

./: .gitignore  CMakeLists.txt  chooselevelscene.cpp  chooselevelscene.h  leveldataconfig.cpp  main.cpp  mainscene.cpp  mainscene.ui  mycoin.cpp  mycoin.h  mypushbutton.cpp  playscene.cpp  res.qrc
resource/: resource.qrc
src/: chooselevelscene.cpp  leveldataconfig.cpp  leveldataconfig.h  mainscene.cpp  mainscene.h  mycoin.cpp  mypushbutton.cpp  mypushbutton.h  playscene.cpp  playscene.h
